resources/src/session.css
.session-feedback-header {
  margin-bottom: 80px;
}
.session-feedback-header h1 {
  margin-bottom: 12px;
}

.session-feedback.panel {
  display: flex;
  align-items: flex-start;
  margin-bottom: 64px;
}

.checkbox-container {
  display: flex;
  align-items: center;
  margin-bottom: 12px;
}

input[type='checkbox'] {
  width: 24px;
  height: 24px;
  margin-right: 10px;
}

.checkbox-container label {
  margin-bottom: 0px;
}

.tell-us-what-you-think-icon {
  margin-left: 40px;
}

.session-question {
  display: flex;
  align-items: flex-start;
  margin-bottom: 28px;
  border-bottom: 1px solid var(--purple);
}
.session-question-content {
  flex: 1;
  margin-bottom: 28px;
}
/* textarea elements already have margin-bottom: 28px, so remove extra margins */
.session-question-content.text {
  margin-bottom: 0;
}
.session-question-content label {
  margin-bottom: 16px;
}
.session-question-number {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--blue);
  color: var(--grey);
  border-radius: 20px;
  width: 28px;
  height: 28px;
  margin-right: 40px;
  font-weight: bold;
}

